# MotionCanvasAgent

./: .env.example  .gitignore  README.md  app.py  paths.py  project_paths.py  pyproject.toml  testing_langgraph.py
agents/: build_prompt.py  call_llm.py  coder_general_agent.py  main.py  state_tracker.py
agents/output_models/: code_output.py  graph_state.py
agents/prompts/: coder_general_01.yaml
ai_utils/: count_tokens.py  openai_api.py
chat_frontend/: README.md  index.html  script.js  style.css
context_files/: context_filepaths.yaml
frontend/: package-lock.json  package.json
frontend/src/: project.ts
frontend/src/plugins/chat/: ChatOverlay.tsx
frontend/src/scenes/: example.tsx
frontend/src/scenes1/: 04_scene.tsx
langchain/: langchain04_codingagent.py  langgraph01_interrupt_with_panel.ipynb  langgraph02_with_llms.ipynb  langgraph03.py  langgraph_interrupt_with_panel.ipynb  testing_langgraph.py
langchain_examples/: exp01_openai_langchain.py  langgraph03_information-gather-prompting.ipynb  langgraph04_codingagent.py  langgraph04_codingagent_streamlit.py  langgraph04dummy.py  langgraph05.py  langgraph05_memory_experiment.py  langgraph06_streamlit_final.py  testing_langgraph.py
langchain_examples/outputs/: rag_langgraph.py
logging_config/: logger.py
utils/: print_methds.py
~/.ssh/: config
